경매 Firebase Firestore 연동 및 상품 페이지 입찰 UI 개선
- Firebase Admin SDK 초기화 (FirebaseConfig 추가)
- 경매 도메인 JPA → Firestore POJO 전환 (Auction, AuctionBid)
- JPA 엔티티/레포지토리 제거 (AuctionItem, AuctionRepository, AuctionBidRepository)
- AuctionService: Firestore 트랜잭션 기반 입찰·조회·상태전환 재작성
- AuctionSchedulerRunner: Firestore 쿼리로 서버 재시작 시 스케줄 복구
- AuctionTaskScheduler, AuctionBidFacade, AuctionSseService: Long auctionId → String
- AuctionController: PathVariable Long → String
- DTO 전체 String auctionId 적용, AuctionItemResponse → Auction 직접 참조
- docker-compose.yml: Redis 전용 구성 (MySQL 제거)
- application.properties: ddl-auto=none, Firebase 경로 힌트 추가
- product.html/js/css: 입찰하기 버튼 추가 (경매 진행 중에만 표시)
  · 판매자 본인 / 현재 최고 입찰자 → 회색 비활성화
  · 최소 입찰가 현재가 110% 적용
  · 낙찰자에게만 채팅하기, 그 외 종료된 상품입니다